--- a/bibfiles/Prominences.bib
+++ b/bibfiles/Prominences.bib
@@ -1,3 +1,81 @@
+@ARTICLE{Lalitha_2013A&A...560A..69L,
+       author = {{Lalitha}, S. and {Fuhrmeister}, B. and {Wolter}, U. and {Schmitt}, J.~H.~M.~M. and {Engels}, D. and {Wieringa}, M.~H.},
+        title = "{A multi-wavelength view of AB Doradus outer atmosphere . Simultaneous X-ray and optical spectroscopy at high cadence}",
+      journal = {\aap},
+     keywords = {stars: activity, stars: coronae, stars: late-type, stars: chromospheres, stars: individual: AB Doradus A, stars: magnetic field, Astrophysics - Solar and Stellar Astrophysics},
+         year = 2013,
+        month = dec,
+       volume = {560},
+          eid = {A69},
+        pages = {A69},
+          doi = {10.1051/0004-6361/201321419},
+archivePrefix = {arXiv},
+       eprint = {1309.4933},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2013A&A...560A..69L},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
+@ARTICLE{Hussain_2005ApJ...621..999H,
+       author = {{Hussain}, G.~A.~J. and {Brickhouse}, N.~S. and {Dupree}, A.~K. and {Jardine}, M.~M. and {van Ballegooijen}, A.~A. and {Hoogerwerf}, R. and {Collier Cameron}, A. and {Donati}, J. -F. and {Favata}, F.},
+        title = "{Inferring Coronal Structure from X-Ray Light Curves and Doppler Shifts: A Chandra Study of AB Doradus}",
+      journal = {\apj},
+     keywords = {Stars: Activity, Stars: Coronae, Stars: Individual: Constellation Name: AB Doradus, Stars: Late-Type, Ultraviolet: Stars, X-Rays: Stars, Astrophysics},
+         year = 2005,
+        month = mar,
+       volume = {621},
+       number = {2},
+        pages = {999-1008},
+          doi = {10.1086/427647},
+archivePrefix = {arXiv},
+       eprint = {astro-ph/0411571},
+ primaryClass = {astro-ph},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2005ApJ...621..999H},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
+@ARTICLE{Cohen_2010ApJ...721...80C,
+       author = {{Cohen}, O. and {Drake}, J.~J. and {Kashyap}, V.~L. and {Hussain}, G.~A.~J. and {Gombosi}, T.~I.},
+        title = "{The Coronal Structure of AB Doradus}",
+      journal = {\apj},
+     keywords = {stars: activity, stars: coronae, stars: magnetic field, Astrophysics - Solar and Stellar Astrophysics},
+         year = 2010,
+        month = sep,
+       volume = {721},
+       number = {1},
+        pages = {80-89},
+          doi = {10.1088/0004-637X/721/1/80},
+archivePrefix = {arXiv},
+       eprint = {1007.4320},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2010ApJ...721...80C},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
+@ARTICLE{Hussain_2007MNRAS.377.1488H,
+       author = {{Hussain}, G.~A.~J. and {Jardine}, M. and {Donati}, J. -F. and {Brickhouse}, N.~S. and {Dunstone}, N.~J. and {Wood}, K. and {Dupree}, A.~K. and {Collier Cameron}, A. and {Favata}, F.},
+        title = "{The coronal structure of AB Doradus determined from contemporaneous Doppler imaging and X-ray spectroscopy}",
+      journal = {\mnras},
+     keywords = {stars: activity, stars: coronae, stars: imaging, stars: magnetic fields, stars: spots, X-rays: stars, Astrophysics},
+         year = 2007,
+        month = jun,
+       volume = {377},
+       number = {4},
+        pages = {1488-1502},
+          doi = {10.1111/j.1365-2966.2007.11692.x},
+archivePrefix = {arXiv},
+       eprint = {astro-ph/0703619},
+ primaryClass = {astro-ph},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2007MNRAS.377.1488H},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
 @ARTICLE{Rosner_1978ApJ...220..643R,
        author = {{Rosner}, R. and {Tucker}, W.~H. and {Vaiana}, G.~S.},
         title = "{Dynamics of the quiescent solar corona.}",
