--- a/bibfiles/Prominences.bib
+++ b/bibfiles/Prominences.bib
@@ -1,3 +1,22 @@
+@ARTICLE{Gudel_2002ARA&A..40..217G,
+       author = {{G{\"u}del}, Manuel},
+        title = "{Stellar Radio Astronomy: Probing Stellar Atmospheres from Protostars to Giants}",
+      journal = {\araa},
+     keywords = {radio stars, coronae, stellar winds, high-energy particles, nonthermal radiation, magnetic fields, Astrophysics},
+         year = 2002,
+        month = jan,
+       volume = {40},
+        pages = {217-261},
+          doi = {10.1146/annurev.astro.40.060401.093806},
+archivePrefix = {arXiv},
+       eprint = {astro-ph/0206436},
+ primaryClass = {astro-ph},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2002ARA&A..40..217G},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
 @ARTICLE{Lalitha_2013A&A...560A..69L,
        author = {{Lalitha}, S. and {Fuhrmeister}, B. and {Wolter}, U. and {Schmitt}, J.~H.~M.~M. and {Engels}, D. and {Wieringa}, M.~H.},
         title = "{A multi-wavelength view of AB Doradus outer atmosphere . Simultaneous X-ray and optical spectroscopy at high cadence}",
