--- a/bibfiles/Prominences.bib
+++ b/bibfiles/Prominences.bib
@@ -1,3 +1,77 @@
+@ARTICLE{Lalitha_2013A&A...559A.119L,
+       author = {{Lalitha}, S. and {Schmitt}, J.~H.~M.~M.},
+        title = "{X-ray activity cycle on the active ultra-fast rotator AB Doradus A?. Implication of correlated coronal and photometric variability}",
+      journal = {\aap},
+     keywords = {stars: activity, stars: coronae, stars: late-type, stars: individual: AB Dor, Astrophysics - Solar and Stellar Astrophysics},
+         year = 2013,
+        month = nov,
+       volume = {559},
+          eid = {A119},
+        pages = {A119},
+          doi = {10.1051/0004-6361/201321723},
+archivePrefix = {arXiv},
+       eprint = {1311.1380},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2013A&A...559A.119L},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
+@ARTICLE{gomezDeCastro_2002MNRAS.332..409G,
+       author = {{G{\'o}mez de Castro}, Ana I.},
+        title = "{On the source of the flaring activity in AB Doradus: the UV spectral signatures}",
+      journal = {\mnras},
+     keywords = {stars: individual: AB Dor, stars: pre-main-sequence, stars: variables: other},
+         year = 2002,
+        month = may,
+       volume = {332},
+       number = {2},
+        pages = {409-421},
+          doi = {10.1046/j.1365-8711.2002.05319.x},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2002MNRAS.332..409G},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
+@ARTICLE{Schmitt_2019A&A...628A..79S,
+       author = {{Schmitt}, J.~H.~M.~M. and {Ioannidis}, P. and {Robrade}, J. and {Czesla}, S. and {Schneider}, P.~C.},
+        title = "{Superflares on AB Doradus observed with TESS}",
+      journal = {\aap},
+     keywords = {stars: activity, stars: flare, stars: solar-type},
+         year = 2019,
+        month = aug,
+       volume = {628},
+          eid = {A79},
+        pages = {A79},
+          doi = {10.1051/0004-6361/201935374},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2019A&A...628A..79S},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
+@ARTICLE{Schmitt_2021A&A...652A.135S,
+       author = {{Schmitt}, J.~H.~M.~M. and {Ioannidis}, P. and {Robrade}, J. and {Predehl}, P. and {Czesla}, S. and {Schneider}, P.~C.},
+        title = "{Simultaneous eROSITA and TESS observations of the ultra-active star AB Doradus}",
+      journal = {\aap},
+     keywords = {X-rays: stars, stars: individual: AB Dor, stars: flare, stars: coronae, stars: activity, Astrophysics - Solar and Stellar Astrophysics},
+         year = 2021,
+        month = aug,
+       volume = {652},
+          eid = {A135},
+        pages = {A135},
+          doi = {10.1051/0004-6361/202141379},
+archivePrefix = {arXiv},
+       eprint = {2106.14537},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2021A&A...652A.135S},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
 @ARTICLE{Gudel_2002ARA&A..40..217G,
        author = {{G{\"u}del}, Manuel},
         title = "{Stellar Radio Astronomy: Probing Stellar Atmospheres from Protostars to Giants}",
