--- a/bibfiles/Prominences.bib
+++ b/bibfiles/Prominences.bib
@@ -1,3 +1,96 @@
+@ARTICLE{Budding_2009AN....330..358B,
+       author = {{Budding}, E. and {Erdem}, A. and {Innis}, J.~L. and {Ol{\'a}h}, K. and {Slee}, O.~B.},
+        title = "{Recent observations of AB Dor and interpretation}",
+      journal = {Astronomische Nachrichten},
+     keywords = {stars: cool: stars: activity, stars: chromospheres, stars: individual (AB Dor), starspots},
+         year = 2009,
+        month = apr,
+       volume = {330},
+       number = {4},
+        pages = {358-365},
+          doi = {10.1002/asna.200811193},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2009AN....330..358B},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
+@ARTICLE{Hussain_2002ApJ...575.1078H,
+       author = {{Hussain}, G.~A.~J. and {van Ballegooijen}, A.~A. and {Jardine}, M. and {Collier Cameron}, A.},
+        title = "{The Coronal Topology of the Rapidly Rotating K0 Dwarf AB Doradus. I. Using Surface Magnetic Field Maps to Model the Structure of the Stellar Corona}",
+      journal = {\apj},
+     keywords = {Stars: Activity, Stars: Coronae, Stars: Rotation, Astrophysics},
+         year = 2002,
+        month = aug,
+       volume = {575},
+       number = {2},
+        pages = {1078-1086},
+          doi = {10.1086/341429},
+archivePrefix = {arXiv},
+       eprint = {astro-ph/0207452},
+ primaryClass = {astro-ph},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2002ApJ...575.1078H},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
+@ARTICLE{Drake_2015ApJ...802...62D,
+       author = {{Drake}, Jeremy J. and {Chung}, Sun Mi and {Kashyap}, Vinay L. and {Garcia-Alvarez}, David},
+        title = "{X-Ray Evidence for a Pole-dominated Corona on AB Dor}",
+      journal = {\apj},
+     keywords = {stars: coronae, stars: late-type, stars: magnetic field, stars: rotation, stars: winds, outflows, X-rays: stars, Astrophysics - Solar and Stellar Astrophysics},
+         year = 2015,
+        month = mar,
+       volume = {802},
+       number = {1},
+          eid = {62},
+        pages = {62},
+          doi = {10.1088/0004-637X/802/1/62},
+archivePrefix = {arXiv},
+       eprint = {1501.05846},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2015ApJ...802...62D},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
+@ARTICLE{Maggio_2000A&A...356..627M,
+       author = {{Maggio}, A. and {Pallavicini}, R. and {Reale}, F. and {Tagliaferri}, G.},
+        title = "{Twin X-ray flares and the active corona of AB Dor observed with BeppoSAX}",
+      journal = {\aap},
+     keywords = {STARS: CORONAE, STARS: LATE-TYPE, STARS: ABUNDANCES, STARS: ACTIVITY, X-RAYS: STARS, STARS: INDIVIDUAL: AB DOR},
+         year = 2000,
+        month = apr,
+       volume = {356},
+        pages = {627-642},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2000A&A...356..627M},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
+@ARTICLE{Slee_2014PASA...31...21S,
+       author = {{Slee}, O.~B. and {Erkan}, N. and {Johnston-Hollitt}, M. and {Budding}, E.},
+        title = "{Multiwavelength Observations of AB Doradus}",
+      journal = {\pasa},
+     keywords = {astrophysical data, multiwavelength observations; stars- cool, active; stars- individual: AB Dor, Astrophysics - Solar and Stellar Astrophysics},
+         year = 2014,
+        month = apr,
+       volume = {31},
+          eid = {e021},
+        pages = {e021},
+          doi = {10.1017/pasa.2014.16},
+archivePrefix = {arXiv},
+       eprint = {1405.6870},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2014PASA...31...21S},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
 @ARTICLE{Lalitha_2013A&A...559A.119L,
        author = {{Lalitha}, S. and {Schmitt}, J.~H.~M.~M.},
         title = "{X-ray activity cycle on the active ultra-fast rotator AB Doradus A?. Implication of correlated coronal and photometric variability}",
