--- a/bibfiles/Prominences.bib
+++ b/bibfiles/Prominences.bib
@@ -1,3 +1,20 @@
+@ARTICLE{See_2018MNRAS.474..536S,
+       author = {{See}, V. and {Jardine}, M. and {Vidotto}, A.~A. and {Donati}, J. -F. and {Boro Saikia}, S. and {Fares}, R. and {Folsom}, C.~P. and {Jeffers}, S.~V. and {Marsden}, S.~C. and {Morin}, J. and {Petit}, P. and {BCool Collaboration}},
+        title = "{The open flux evolution of a solar-mass star on the main sequence}",
+      journal = {\mnras},
+     keywords = {techniques: polarimetric, stars: activity, stars: evolution, stars: magnetic field, stars: rotation},
+         year = 2018,
+        month = feb,
+       volume = {474},
+       number = {1},
+        pages = {536-546},
+          doi = {10.1093/mnras/stx2599},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2018MNRAS.474..536S},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
 @ARTICLE{Budding_2009AN....330..358B,
        author = {{Budding}, E. and {Erdem}, A. and {Innis}, J.~L. and {Ol{\'a}h}, K. and {Slee}, O.~B.},
         title = "{Recent observations of AB Dor and interpretation}",
