--- a/bibfiles/Prominences.bib
+++ b/bibfiles/Prominences.bib
@@ -1,3 +1,20 @@
+@ARTICLE{Innis_1985PASA....6..160I,
+       author = {{Innis}, J.~L. and {Coates}, D.~W. and {Thompson}, K. and {Nelson}, G.~J. and {Slee}, O.~B. and {Wright}, A.~E.},
+        title = "{An optical and radio investigation of the active RS CVn star HD 127535.}",
+      journal = {\pasa},
+     keywords = {Binary Stars, Radio Spectra, Stellar Activity, Stellar Spectrophotometry, Visible Spectrum, Light Curve, Starspots, Stellar Temperature, Astrophysics},
+         year = 1985,
+        month = jan,
+       volume = {6},
+       number = {2},
+        pages = {160-164},
+          doi = {10.1017/S1323358000017999},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/1985PASA....6..160I},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
 @ARTICLE{See_2018MNRAS.474..536S,
        author = {{See}, V. and {Jardine}, M. and {Vidotto}, A.~A. and {Donati}, J. -F. and {Boro Saikia}, S. and {Fares}, R. and {Folsom}, C.~P. and {Jeffers}, S.~V. and {Marsden}, S.~C. and {Morin}, J. and {Petit}, P. and {BCool Collaboration}},
         title = "{The open flux evolution of a solar-mass star on the main sequence}",
