--- a/bibfiles/Prominences.bib
+++ b/bibfiles/Prominences.bib
@@ -1,3 +1,34 @@
+@ARTICLE{Hartmann_1985SoPh..100..587H,
+       author = {{Hartmann}, L.},
+        title = "{Mass Loss from Solar-Type Stars}",
+      journal = {\solphys},
+     keywords = {Main Sequence Stars, Solar Wind, Star Clusters, Stellar Mass Ejection, Stellar Winds, T Tauri Stars, Angular Momentum, Balmer Series, Early Stars, Line Spectra, Astrophysics, Mass Loss, Solar Wind, Mass Loss Rate, Main Sequence, Radiative Cool},
+         year = 1985,
+        month = oct,
+       volume = {100},
+        pages = {587},
+          doi = {10.1007/BF00158447},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/1985SoPh..100..587H},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
+@ARTICLE{Weber_1967ApJ...148..217W,
+       author = {{Weber}, Edmund J. and {Davis}, Leverett, Jr.},
+        title = "{The Angular Momentum of the Solar Wind}",
+      journal = {\apj},
+         year = 1967,
+        month = apr,
+       volume = {148},
+        pages = {217-227},
+          doi = {10.1086/149138},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/1967ApJ...148..217W},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
 @ARTICLE{Innis_1985PASA....6..160I,
        author = {{Innis}, J.~L. and {Coates}, D.~W. and {Thompson}, K. and {Nelson}, G.~J. and {Slee}, O.~B. and {Wright}, A.~E.},
         title = "{An optical and radio investigation of the active RS CVn star HD 127535.}",
