--- a/bibfiles/Prominences.bib
+++ b/bibfiles/Prominences.bib
@@ -1,3 +1,43 @@
+@ARTICLE{Folsom_2020A&A...633A..48F,
+       author = {{Folsom}, C.~P. and {{\'O} Fionnag{\'a}in}, D. and {Fossati}, L. and {Vidotto}, A.~A. and {Moutou}, C. and {Petit}, P. and {Dragomir}, D. and {Donati}, J. -F.},
+        title = "{Circumstellar environment of 55 Cancri. The super-Earth 55 Cnc e as a primary target for star-planet interactions}",
+      journal = {\aap},
+     keywords = {stars: individual: 55 Cnc, stars: magnetic field, stars: late-type, stars: winds, outflows, planetary systems, planet-star interactions, Astrophysics - Solar and Stellar Astrophysics, Astrophysics - Earth and Planetary Astrophysics},
+         year = 2020,
+        month = jan,
+       volume = {633},
+          eid = {A48},
+        pages = {A48},
+          doi = {10.1051/0004-6361/201937186},
+archivePrefix = {arXiv},
+       eprint = {1912.03736},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2020A&A...633A..48F},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
+@ARTICLE{Strugarek_2022MNRAS.512.4556S,
+       author = {{Strugarek}, A. and {Fares}, R. and {Bourrier}, V. and {Brun}, A.~S. and {R{\'e}ville}, V. and {Amari}, T. and {Helling}, Ch and {Jardine}, M. and {Llama}, J. and {Moutou}, C. and {Vidotto}, A.~A. and {Wheatley}, P.~J. and {Zarka}, P.},
+        title = "{MOVES - V. Modelling star-planet magnetic interactions of HD 189733}",
+      journal = {\mnras},
+     keywords = {MHD, planet-star interactions, stars: wind, outflows, Astrophysics - Solar and Stellar Astrophysics, Astrophysics - Earth and Planetary Astrophysics},
+         year = 2022,
+        month = may,
+       volume = {512},
+       number = {3},
+        pages = {4556-4572},
+          doi = {10.1093/mnras/stac778},
+archivePrefix = {arXiv},
+       eprint = {2203.10956},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2022MNRAS.512.4556S},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
 @ARTICLE{Hartmann_1985SoPh..100..587H,
        author = {{Hartmann}, L.},
         title = "{Mass Loss from Solar-Type Stars}",
