--- a/bibfiles/Prominences.bib
+++ b/bibfiles/Prominences.bib
@@ -1,3 +1,23 @@
+@ARTICLE{Close_2007ApJ...665..736C,
+       author = {{Close}, Laird M. and {Thatte}, Niranjan and {Nielsen}, Eric L. and {Abuter}, Roberto and {Clarke}, Fraser and {Tecza}, Matthias},
+        title = "{New Photometry and Spectra of AB Doradus C: An Accurate Mass Determination of a Young Low-Mass Object with Theoretical Evolutionary Tracks}",
+      journal = {\apj},
+     keywords = {Stars: Binaries: General, Instrumentation: Adaptive Optics, Stars: Evolution, Stars: Formation, stars: individual (AB Doradus C), Stars: Low-Mass, Brown Dwarfs, Astrophysics},
+         year = 2007,
+        month = aug,
+       volume = {665},
+       number = {1},
+        pages = {736-743},
+          doi = {10.1086/518207},
+archivePrefix = {arXiv},
+       eprint = {astro-ph/0703564},
+ primaryClass = {astro-ph},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2007ApJ...665..736C},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
 @ARTICLE{Folsom_2020A&A...633A..48F,
        author = {{Folsom}, C.~P. and {{\'O} Fionnag{\'a}in}, D. and {Fossati}, L. and {Vidotto}, A.~A. and {Moutou}, C. and {Petit}, P. and {Dragomir}, D. and {Donati}, J. -F.},
         title = "{Circumstellar environment of 55 Cancri. The super-Earth 55 Cnc e as a primary target for star-planet interactions}",
