--- a/bibfiles/Prominences.bib
+++ b/bibfiles/Prominences.bib
@@ -1,3 +1,20 @@
+@ARTICLE{vanBallegooijen_1998ApJ...501..866V,
+       author = {{van Ballegooijen}, A.~A. and {Cartledge}, N.~P. and {Priest}, E.~R.},
+        title = "{Magnetic Flux Transport and the Formation of Filament Channels on the Sun}",
+      journal = {\apj},
+     keywords = {SUN: CORONA, SUN: FILAMENTS, SUN: MAGNETIC FIELDS, Sun: Corona, Sun: Filaments, Sun: Magnetic Fields},
+         year = 1998,
+        month = jul,
+       volume = {501},
+       number = {2},
+        pages = {866-881},
+          doi = {10.1086/305823},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/1998ApJ...501..866V},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
 @ARTICLE{Close_2007ApJ...665..736C,
        author = {{Close}, Laird M. and {Thatte}, Niranjan and {Nielsen}, Eric L. and {Abuter}, Roberto and {Clarke}, Fraser and {Tecza}, Matthias},
         title = "{New Photometry and Spectra of AB Doradus C: An Accurate Mass Determination of a Young Low-Mass Object with Theoretical Evolutionary Tracks}",
