--- a/bibfiles/Prominences.bib
+++ b/bibfiles/Prominences.bib
@@ -1,3 +1,20 @@
+@ARTICLE{Ferreira_2000MNRAS.316..647F,
+       author = {{Ferreira}, J.~M.},
+        title = "{A model of slingshot prominences in rapidly rotating stars}",
+      journal = {\mnras},
+     keywords = {STARS: ACTIVITY, STARS: CORONAE, STARS: FLARE, STARS: MAGNETIC FIELDS, STARS: ROTATION},
+         year = 2000,
+        month = aug,
+       volume = {316},
+       number = {3},
+        pages = {647-656},
+          doi = {10.1046/j.1365-8711.2000.03540.x},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2000MNRAS.316..647F},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
 @ARTICLE{vanHoof_2014MNRAS.444..420V,
        author = {{van Hoof}, P.~A.~M. and {Williams}, R.~J.~R. and {Volk}, K. and {Chatzikos}, M. and {Ferland}, G.~J. and {Lykins}, M. and {Porter}, R.~L. and {Wang}, Y.},
         title = "{Accurate determination of the free-free Gaunt factor - I. Non-relativistic Gaunt factors}",
