--- a/bibfiles/Prominences.bib
+++ b/bibfiles/Prominences.bib
@@ -1,3 +1,24 @@
+@ARTICLE{Reville_2016ApJ...832..145R,
+       author = {{R{\'e}ville}, Victor and {Folsom}, Colin P. and {Strugarek}, Antoine and {Brun}, Allan Sacha},
+        title = "{Age Dependence of Wind Properties for Solar-type Stars: A 3D Study}",
+      journal = {\apj},
+     keywords = {magnetohydrodynamics: MHD, stars: winds, outflows, stars: magnetic field, stars: rotation, Sun: evolution, methods: numerical, Astrophysics - Solar and Stellar Astrophysics},
+         year = 2016,
+        month = dec,
+       volume = {832},
+       number = {2},
+          eid = {145},
+        pages = {145},
+          doi = {10.3847/0004-637X/832/2/145},
+archivePrefix = {arXiv},
+       eprint = {1609.06602},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2016ApJ...832..145R},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
 @ARTICLE{Ferreira_2000MNRAS.316..647F,
        author = {{Ferreira}, J.~M.},
         title = "{A model of slingshot prominences in rapidly rotating stars}",
