--- a/bibfiles/Prominences.bib
+++ b/bibfiles/Prominences.bib
@@ -1,3 +1,21 @@
+@ARTICLE{Poppenhaeger_2014A&A...565L...1P,
+       author = {{Poppenhaeger}, K. and {Wolk}, S.~J.},
+        title = "{Indications for an influence of hot Jupiters on the rotation and activity of their host stars}",
+      journal = {\aap},
+     keywords = {stars: activity, stars: coronae, planet-star interactions, X-rays: stars, binaries: general, Astrophysics - Solar and Stellar Astrophysics, Astrophysics - Earth and Planetary Astrophysics},
+         year = 2014,
+        month = may,
+       volume = {565},
+          eid = {L1},
+        pages = {L1},
+          doi = {10.1051/0004-6361/201423454},
+archivePrefix = {arXiv},
+       eprint = {1404.1073},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2014A&A...565L...1P},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
 @ARTICLE{Reville_2016ApJ...832..145R,
        author = {{R{\'e}ville}, Victor and {Folsom}, Colin P. and {Strugarek}, Antoine and {Brun}, Allan Sacha},
         title = "{Age Dependence of Wind Properties for Solar-type Stars: A 3D Study}",
