--- a/bibfiles/Prominences.bib
+++ b/bibfiles/Prominences.bib
@@ -1,3 +1,17 @@
+@ARTICLE{CollierCameron_1990MNRAS.247..415C,
+       author = {{Collier Cameron}, A. and {Duncan}, D.~K. and {Ehrenfreund}, P. and {Foing}, B.~H. and {Kuntz}, K.~D. and {Penston}, M.~V. and {Robinson}, R.~D. and {Soderblom}, D.~R.},
+        title = "{Fast spectroscopic variations on rapidly rotating, cool dwarfs III. Masses of circumstellar absorbing clouds on AB Doradus.}",
+      journal = {\mnras},
+         year = 1990,
+        month = dec,
+       volume = {247},
+        pages = {415},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/1990MNRAS.247..415C},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
 @ARTICLE{Poppenhaeger_2014A&A...565L...1P,
        author = {{Poppenhaeger}, K. and {Wolk}, S.~J.},
         title = "{Indications for an influence of hot Jupiters on the rotation and activity of their host stars}",
