--- a/bibfiles/Prominences.bib
+++ b/bibfiles/Prominences.bib
@@ -1537,7 +1537,8 @@ archivePrefix = {arXiv},
         title = "{Stellar atmospheres}",
          year = 1978,
        adsurl = {https://ui.adsabs.harvard.edu/abs/1978stat.book.....M},
-      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+    publisher = {W. H. Freeman and Company}
 }
 
 @ARTICLE{Wright_1975MNRAS.170...41W,
@@ -1565,6 +1566,7 @@ archivePrefix = {arXiv},
         pages = {229},
        adsurl = {https://ui.adsabs.harvard.edu/abs/2001IAUS..203..229C},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+       series = "",
 }
 
 @ARTICLE{Jardine_2019MNRAS.482.2853J,
