--- a/bibfiles/Prominences.bib
+++ b/bibfiles/Prominences.bib
@@ -1566,7 +1566,7 @@ archivePrefix = {arXiv},
         pages = {229},
        adsurl = {https://ui.adsabs.harvard.edu/abs/2001IAUS..203..229C},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
-       series = "",
+       series = "{}",
 }
 
 @ARTICLE{Jardine_2019MNRAS.482.2853J,
