--- a/bibfiles/Prominences.bib
+++ b/bibfiles/Prominences.bib
@@ -1565,8 +1565,8 @@ archivePrefix = {arXiv},
         month = jan,
         pages = {229},
        adsurl = {https://ui.adsabs.harvard.edu/abs/2001IAUS..203..229C},
-      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
-       series = "{}",
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+       series = "",
 }
 
 @ARTICLE{Jardine_2019MNRAS.482.2853J,
