--- a/bibfiles/Prominences.bib
+++ b/bibfiles/Prominences.bib
@@ -1,3 +1,113 @@
+@INPROCEEDINGS{Dulk_2001pre5.conf..429D,
+       author = {{Dulk}, G.},
+        title = "{Solar Radio Emissions}",
+     keywords = {Solar radio emissions, Sun, review},
+    booktitle = {Planetary Radio Emissions V},
+         year = 2001,
+        month = jan,
+        pages = {429},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2001pre5.conf..429D},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
+@ARTICLE{Wolter_2014A&A...570A..95W,
+       author = {{Wolter}, U. and {Czesla}, S. and {Fuhrmeister}, B. and {Robrade}, J. and {Engels}, D. and {Wieringa}, M. and {Schmitt}, J.~H.~M.~M.},
+        title = "{Masses and activity of AB Doradus B a/b. The age of the AB Dor quadruple system revisited}",
+      journal = {\aap},
+     keywords = {stars: activity, stars: coronae, stars: low-mass, stars: rotation, binaries: general, stars: individual: Rst 137B},
+         year = 2014,
+        month = oct,
+       volume = {570},
+          eid = {A95},
+        pages = {A95},
+          doi = {10.1051/0004-6361/201424137},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2014A&A...570A..95W},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Azulay_2015A&A...578A..16A,
+       author = {{Azulay}, R. and {Guirado}, J.~C. and {Marcaide}, J.~M. and {Mart{\'\i}-Vidal}, I. and {Ros}, E. and {Jauncey}, D.~L. and {Lestrade}, J. -F. and {Preston}, R.~A. and {Reynolds}, J.~E. and {Tognelli}, E. and {Ventura}, P.},
+        title = "{Dynamical masses of the low-mass stellar binary AB Doradus B}",
+      journal = {\aap},
+     keywords = {astrometry, binaries: close, stars: fundamental parameters, stars: pre-main sequence, Astrophysics - Solar and Stellar Astrophysics},
+         year = 2015,
+        month = jun,
+       volume = {578},
+          eid = {A16},
+        pages = {A16},
+          doi = {10.1051/0004-6361/201525704},
+archivePrefix = {arXiv},
+       eprint = {1504.02766},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2015A&A...578A..16A},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
+@ARTICLE{Torres_2012ApJ...747...18T,
+       author = {{Torres}, Rosa M. and {Loinard}, Laurent and {Mioduszewski}, Amy J. and {Boden}, Andrew F. and {Franco-Hern{\'a}ndez}, Ramiro and {Vlemmings}, Wouter H.~T. and {Rodr{\'\i}guez}, Luis F.},
+        title = "{VLBA Determination of the Distance to nearby Star-forming Regions. V. Dynamical Mass, Distance, and Radio Structure of V773 Tau A}",
+      journal = {\apj},
+     keywords = {astrometry, binaries: spectroscopic, radio continuum: stars, stars: formation, stars: individual: V773 Tau, stars: pre-main sequence, Astrophysics - Solar and Stellar Astrophysics},
+         year = 2012,
+        month = mar,
+       volume = {747},
+       number = {1},
+          eid = {18},
+        pages = {18},
+          doi = {10.1088/0004-637X/747/1/18},
+archivePrefix = {arXiv},
+       eprint = {1112.0114},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2012ApJ...747...18T},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
+@ARTICLE{Massi_2006A&A...453..959M,
+       author = {{Massi}, M. and {Forbrich}, J. and {Menten}, K.~M. and {Torricelli-Ciamponi}, G. and {Neidh{\"o}fer}, J. and {Leurini}, S. and {Bertoldi}, F.},
+        title = "{Synchrotron emission from the T Tauri binary system V773 Tauri A}",
+      journal = {\aap},
+     keywords = {stars: coronae, stars: individual: V773 Tau A, stars: flare, stars: pre-main sequence, radio continuum: stars, stars: activity, Astrophysics},
+         year = 2006,
+        month = jul,
+       volume = {453},
+       number = {3},
+        pages = {959-964},
+          doi = {10.1051/0004-6361:20053535},
+archivePrefix = {arXiv},
+       eprint = {astro-ph/0604124},
+ primaryClass = {astro-ph},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2006A&A...453..959M},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
+@ARTICLE{Davis_Vedantham_2021A&A...650L..20D,
+       author = {{Davis}, I. and {Vedantham}, H.~K. and {Callingham}, J.~R. and {Shimwell}, T.~W. and {Vidotto}, A.~A. and {Zarka}, P. and {Ray}, T.~P. and {Drabent}, A.},
+        title = "{Large closed-field corona of WX Ursae Majoris evidenced from radio observations}",
+      journal = {\aap},
+     keywords = {stars: coronae, radio continuum: stars, plasmas, radiation mechanisms: non-thermal, Astrophysics - Solar and Stellar Astrophysics},
+         year = 2021,
+        month = jun,
+       volume = {650},
+          eid = {L20},
+        pages = {L20},
+          doi = {10.1051/0004-6361/202140772},
+archivePrefix = {arXiv},
+       eprint = {2105.01021},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2021A&A...650L..20D},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
 @ARTICLE{CollierCameron_1990MNRAS.247..415C,
        author = {{Collier Cameron}, A. and {Duncan}, D.~K. and {Ehrenfreund}, P. and {Foing}, B.~H. and {Kuntz}, K.~D. and {Penston}, M.~V. and {Robinson}, R.~D. and {Soderblom}, D.~R.},
         title = "{Fast spectroscopic variations on rapidly rotating, cool dwarfs III. Masses of circumstellar absorbing clouds on AB Doradus.}",
