--- a/bibfiles/Solar.bib
+++ b/bibfiles/Solar.bib
@@ -1,3 +1,20 @@
+@ARTICLE{Dravskikh_2022ARep...66..490D,
+       author = {{Dravskikh}, A.~F. and {Dravskikh}, Yu. A.},
+        title = "{Recombination Radio Lines of the Sun}",
+      journal = {Astronomy Reports},
+     keywords = {solar radio emission, spectrum of radio emission of active formations over sunspots, Paschen-Back profiles of hydrogen recombination radio lines, neutral hydrogen over sunspots, prospects for observing recombination radio lines in the spectrum of the Sun},
+         year = 2022,
+        month = jun,
+       volume = {66},
+       number = {6},
+        pages = {490-499},
+          doi = {10.1134/S1063772922060038},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2022ARep...66..490D},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
 @ARTICLE{Panasenco_2020ApJS..246...54P,
        author = {{Panasenco}, Olga and {Velli}, Marco and {D'Amicis}, Raffaella and {Shi}, Chen and {R{\'e}ville}, Victor and {Bale}, Stuart D. and {Badman}, Samuel T. and {Kasper}, Justin and {Korreck}, Kelly and {Bonnell}, J.~W. and {Wit}, Dudok de Thierry and {Goetz}, Keith and {Harvey}, Peter R. and {MacDowall}, Robert J. and {Malaspina}, David M. and {Pulupa}, Marc and {Case}, Anthony W. and {Larson}, Davin and {Livi}, Roberto and {Stevens}, Michael and {Whittlesey}, Phyllis},
         title = "{Exploring Solar Wind Origins and Connecting Plasma Flows from the Parker Solar Probe to 1 au: Nonspherical Source Surface and Alfv{\'e}nic Fluctuations}",
