--- a/bibfiles/Solar.bib
+++ b/bibfiles/Solar.bib
@@ -1,3 +1,23 @@
+@ARTICLE{OFionnagain_2018MNRAS.476.2465O,
+       author = {{{\'O} Fionnag{\'a}in}, D. and {Vidotto}, A.~A.},
+        title = "{The solar wind in time: a change in the behaviour of older winds?}",
+      journal = {\mnras},
+     keywords = {stars: mass-loss, stars: solar-type, stars: winds, outflows, Astrophysics - Solar and Stellar Astrophysics, Astrophysics - Earth and Planetary Astrophysics},
+         year = 2018,
+        month = may,
+       volume = {476},
+       number = {2},
+        pages = {2465-2475},
+          doi = {10.1093/mnras/sty394},
+archivePrefix = {arXiv},
+       eprint = {1802.04575},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2018MNRAS.476.2465O},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
 @ARTICLE{Dravskikh_2022ARep...66..490D,
        author = {{Dravskikh}, A.~F. and {Dravskikh}, Yu. A.},
         title = "{Recombination Radio Lines of the Sun}",
