--- a/bibfiles/Prominences.bib
+++ b/bibfiles/Prominences.bib
@@ -1,3 +1,22 @@
+@ARTICLE{Ness_2004A&A...427..667N,
+       author = {{Ness}, J. -U. and {G{\"u}del}, M. and {Schmitt}, J.~H.~M.~M. and {Audard}, M. and {Telleschi}, A.},
+        title = "{On the sizes of stellar X-ray coronae}",
+      journal = {\aap},
+     keywords = {X-rays: stars, stars: coronae, stars: late-type, stars: activity, techniques: spectroscopic, Astrophysics},
+         year = 2004,
+        month = nov,
+       volume = {427},
+        pages = {667-683},
+          doi = {10.1051/0004-6361:20040504},
+archivePrefix = {arXiv},
+       eprint = {astro-ph/0407231},
+ primaryClass = {astro-ph},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2004A&A...427..667N},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
 @INPROCEEDINGS{Dulk_2001pre5.conf..429D,
        author = {{Dulk}, G.},
         title = "{Solar Radio Emissions}",
