--- a/bibfiles/Prominences.bib
+++ b/bibfiles/Prominences.bib
@@ -1,3 +1,20 @@
+@ARTICLE{Walter_2004AN....325..241W,
+       author = {{Walter}, F.~M.},
+        title = "{Probing small scale structure in the atmosphere of V471 Tauri}",
+      journal = {Astronomische Nachrichten},
+     keywords = {stars: atmospheres, binaries: eclipsing, stars: chromospheres, stars: individual (V471 Tauri)},
+         year = 2004,
+        month = mar,
+       volume = {325},
+       number = {3},
+        pages = {241-244},
+          doi = {10.1002/asna.200310209},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2004AN....325..241W},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
 @ARTICLE{Ness_2004A&A...427..667N,
        author = {{Ness}, J. -U. and {G{\"u}del}, M. and {Schmitt}, J.~H.~M.~M. and {Audard}, M. and {Telleschi}, A.},
         title = "{On the sizes of stellar X-ray coronae}",
