--- a/bibfiles/Prominences.bib
+++ b/bibfiles/Prominences.bib
@@ -748,18 +748,20 @@ archivePrefix = {arXiv},
 
 
 @ARTICLE{Brown_2022arXiv220503108B,
-       author = {{Brown}, E.~L. and {Jeffers}, S.~V. and {Marsden}, S.~C. and {Morin}, J. and {Boro Saikia}, S. and {Petit}, P. and {Jardine}, M.~M. and {See}, V. and {Vidotto}, A.~A. and {Mengel}, M.~W. and {Dahlkemper}, M.~N. and {the BCool Collaboration}},
+        author = {{Brown}, E.~L. and {Jeffers}, S.~V. and {Marsden}, S.~C. and {Morin}, J. and {Boro Saikia}, S. and {Petit}, P. and {Jardine}, M.~M. and {See}, V. and {Vidotto}, A.~A. and {Mengel}, M.~W. and {Dahlkemper}, M.~N. and {the BCool Collaboration}},
         title = "{Linking chromospheric activity and magnetic field properties for late-type dwarf stars}",
-      journal = {arXiv e-prints},
-     keywords = {Astrophysics - Solar and Stellar Astrophysics},
+      journal = {\mnras},
+     keywords = {stars: activity, stars: late-type, stars: magnetic field, Astrophysics - Solar and Stellar Astrophysics},
          year = 2022,
-        month = may,
-          eid = {arXiv:2205.03108},
-        pages = {arXiv:2205.03108},
+        month = aug,
+       volume = {514},
+       number = {3},
+        pages = {4300-4319},
+          doi = {10.1093/mnras/stac1291},
 archivePrefix = {arXiv},
        eprint = {2205.03108},
  primaryClass = {astro-ph.SR},
-       adsurl = {https://ui.adsabs.harvard.edu/abs/2022arXiv220503108B},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2022MNRAS.514.4300B},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
@@ -787,17 +789,20 @@ archivePrefix = {arXiv},
 
 @ARTICLE{Tripathi_2022arXiv220501298T,
        author = {{Tripathi}, B. and {Fraser}, A.~E. and {Terry}, P.~W. and {Zweibel}, E.~G. and {Pueschel}, M.~J.},
-        title = "{Mechanism for Sequestering Magnetic Energy at Large Scales in Shear-Flow Turbulence}",
-      journal = {arXiv e-prints},
+        title = "{Mechanism for sequestering magnetic energy at large scales in shear-flow turbulence}",
+      journal = {Physics of Plasmas},
      keywords = {Physics - Plasma Physics, Astrophysics - Astrophysics of Galaxies, Astrophysics - Solar and Stellar Astrophysics, Physics - Fluid Dynamics},
          year = 2022,
-        month = may,
-          eid = {arXiv:2205.01298},
-        pages = {arXiv:2205.01298},
+        month = jul,
+       volume = {29},
+       number = {7},
+          eid = {070701},
+        pages = {070701},
+          doi = {10.1063/5.0096886},
 archivePrefix = {arXiv},
        eprint = {2205.01298},
  primaryClass = {physics.plasm-ph},
-       adsurl = {https://ui.adsabs.harvard.edu/abs/2022arXiv220501298T},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2022PhPl...29g0701T},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
