--- a/bibfiles/Prominences.bib
+++ b/bibfiles/Prominences.bib
@@ -43,7 +43,9 @@ archivePrefix = {arXiv},
         month = jan,
         pages = {429},
        adsurl = {https://ui.adsabs.harvard.edu/abs/2001pre5.conf..429D},
-      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+    publisher = {The Austrian Academy of Sciences}
+      address = {Wien, Austria}
 }
 
 
@@ -1689,7 +1691,8 @@ archivePrefix = {arXiv},
          year = 1978,
        adsurl = {https://ui.adsabs.harvard.edu/abs/1978stat.book.....M},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System},
-    publisher = {W. H. Freeman and Company}
+    publisher = {W. H. Freeman and Company},
+      address = {San Francisco, CA}
 }
 
 @ARTICLE{Wright_1975MNRAS.170...41W,
@@ -1718,6 +1721,8 @@ archivePrefix = {arXiv},
        adsurl = {https://ui.adsabs.harvard.edu/abs/2001IAUS..203..229C},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System},
        series = "{}",
+    publisher = {Astronomical Society of the Pacific},
+      address = {San Francisco, CA}
 }
 
 @ARTICLE{Jardine_2019MNRAS.482.2853J,
