--- a/bibfiles/Brasseur.bib
+++ b/bibfiles/Brasseur.bib
@@ -1,5 +1,5 @@
 
-@ARTICLE{2024MNRAS.530.2442B,
+@ARTICLE{Brasseur_2024MNRAS.530.2442B,
        author = {{Brasseur}, C.~E. and {Jardine}, M.~M. and {Hussain}, G.~A.~J.},
         title = "{Constraining the coronal properties of AB Dor in the radio regime}",
       journal = {\mnras},
@@ -17,7 +17,7 @@ archivePrefix = {arXiv},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
-@ARTICLE{2019ApJ...883...88B,
+@ARTICLE{Brasseur_2019ApJ...883...88B,
        author = {{Brasseur}, C.~E. and {Osten}, Rachel A. and {Fleming}, Scott W.},
         title = "{Short-duration Stellar Flares in GALEX Data}",
       journal = {\apj},
@@ -36,7 +36,7 @@ archivePrefix = {arXiv},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
-@ARTICLE{2023ApJ...944....5B,
+@ARTICLE{Brasseur_2023ApJ...944....5B,
        author = {{Brasseur}, C.~E. and {Osten}, Rachel A. and {Tristan}, Isaiah I. and {Kowalski}, Adam F.},
         title = "{Constraints on Stellar Flare Energy Ratios in the NUV and Optical from a Multiwavelength Study of GALEX and Kepler Flare Stars}",
       journal = {\apj},
@@ -56,7 +56,7 @@ archivePrefix = {arXiv},
 }
 
 
-@ARTICLE{2021AJ....161....2Z,
+@ARTICLE{Zhou_Brasseur_2021AJ....161....2Z,
        author = {{Zhou}, George and {Quinn}, Samuel N. and {Irwin}, Jonathan and {Huang}, Chelsea X. and {Collins}, Karen A. and {Bouma}, Luke G. and {Khan}, Lamisha and {Landrigan}, Anaka and {Vanderburg}, Andrew M. and {Rodriguez}, Joseph E. and {Latham}, David W. and {Torres}, Guillermo and {Douglas}, Stephanie T. and {Bieryla}, Allyson and {Esquerdo}, Gilbert A. and {Berlind}, Perry and {Calkins}, Michael L. and {Buchhave}, Lars A. and {Charbonneau}, David and {Collins}, Kevin I. and {Kielkopf}, John F. and {Jensen}, Eric L.~N. and {Tan}, Thiam-Guan and {Hart}, Rhodes and {Carter}, Brad and {Stockdale}, Christopher and {Ziegler}, Carl and {Law}, Nicholas and {Mann}, Andrew W. and {Howell}, Steve B. and {Matson}, Rachel A. and {Scott}, Nicholas J. and {Furlan}, Elise and {White}, Russel J. and {Hellier}, Coel and {Anderson}, David R. and {West}, Richard G. and {Ricker}, George and {Vanderspek}, Roland and {Seager}, Sara and {Jenkins}, Jon M. and {Winn}, Joshua N. and {Mireles}, Ismael and {Rowden}, Pamela and {Yahalomi}, Daniel A. and {Wohler}, Bill and {Brasseur}, Clara. E. and {Daylan}, Tansu and {Col{\'o}n}, Knicole D.},
         title = "{Two Young Planetary Systems around Field Stars with Ages between 20 and 320 Myr from TESS}",
       journal = {\aj},
@@ -75,7 +75,7 @@ archivePrefix = {arXiv},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
-@ARTICLE{2021AJ....161...97C,
+@ARTICLE{Carmichael_Brasseur_2021AJ....161...97C,
        author = {{Carmichael}, Theron W. and {Quinn}, Samuel N. and {Zhou}, George and {Grieves}, Nolan and {Irwin}, Jonathan M. and {Stassun}, Keivan G. and {Vanderburg}, Andrew M. and {Winn}, Joshua N. and {Bouchy}, Francois and {Brasseur}, Clara E. and {Brice{\~n}o}, C{\'e}sar and {Caldwell}, Douglas A. and {Charbonneau}, David and {Collins}, Karen A. and {Colon}, Knicole D. and {Eastman}, Jason D. and {Fausnaugh}, Michael and {Fong}, William and {F{\H{u}}r{\'e}sz}, G{\'a}bor and {Huang}, Chelsea and {Jenkins}, Jon M. and {Kielkopf}, John F. and {Latham}, David W. and {Law}, Nicholas and {Lund}, Michael B. and {Mann}, Andrew W. and {Ricker}, George R. and {Rodriguez}, Joseph E. and {Schwarz}, Richard P. and {Shporer}, Avi and {Tenenbaum}, Peter and {Wood}, Mackenna L. and {Ziegler}, Carl},
         title = "{TOI-811b and TOI-852b: New Transiting Brown Dwarfs with Similar Masses and Very Different Radii and Ages from the TESS Mission}",
       journal = {\aj},
@@ -95,7 +95,7 @@ archivePrefix = {arXiv},
 }
 
 
-@ARTICLE{2021AJ....162...87B,
+@ARTICLE{Burt_Brasseur_2021AJ....162...87B,
        author = {{Burt}, Jennifer A. and {Dragomir}, Diana and {Molli{\`e}re}, Paul and {Youngblood}, Allison and {Garc{\'\i}a Mu{\~n}oz}, Antonio and {McCann}, John and {Kreidberg}, Laura and {Huang}, Chelsea X. and {Collins}, Karen A. and {Eastman}, Jason D. and {Abe}, Lyu and {Almenara}, Jose M. and {Crossfield}, Ian J.~M. and {Ziegler}, Carl and {Rodriguez}, Joseph E. and {Mamajek}, Eric E. and {Stassun}, Keivan G. and {Halverson}, Samuel P. and {Villanueva}, Steven and {Butler}, R. Paul and {Wang}, Sharon Xuesong and {Schwarz}, Richard P. and {Ricker}, George R. and {Vanderspek}, Roland and {Latham}, David W. and {Seager}, S. and {Winn}, Joshua N. and {Jenkins}, Jon M. and {Agabi}, Abdelkrim and {Bonfils}, Xavier and {Ciardi}, David and {Cointepas}, Marion and {Crane}, Jeffrey D. and {Crouzet}, Nicolas and {Dransfield}, Georgina and {Feng}, Fabo and {Furlan}, Elise and {Guillot}, Tristan and {Gupta}, Arvind F. and {Howell}, Steve B. and {Jensen}, Eric L.~N. and {Law}, Nicholas and {Mann}, Andrew W. and {Marie-Sainte}, Wenceslas and {Matson}, Rachel A. and {Matthews}, Elisabeth C. and {M{\'e}karnia}, Djamel and {Pepper}, Joshua and {Scott}, Nic and {Shectman}, Stephen A. and {Schlieder}, Joshua E. and {Schmider}, Fran{\c{c}}ois-Xavier and {Stevens}, Daniel J. and {Teske}, Johanna K. and {Triaud}, Amaury H.~M.~J. and {Charbonneau}, David and {Berta-Thompson}, Zachory K. and {Burke}, Christopher J. and {Daylan}, Tansu and {Barclay}, Thomas and {Wohler}, Bill and {Brasseur}, C.~E.},
         title = "{TOI-1231 b: A Temperate, Neptune-sized Planet Transiting the Nearby M3 Dwarf NLTT 24399}",
       journal = {\aj},
@@ -114,7 +114,7 @@ archivePrefix = {arXiv},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
-@ARTICLE{2021PASP..133i5002F,
+@ARTICLE{Fausnaugh_Brasseur_2021PASP..133i5002F,
        author = {{Fausnaugh}, Michael and {Morgan}, Ed and {Vanderspek}, Roland and {Pepper}, Joshua and {Burke}, Christopher J. and {Levine}, Alan M. and {Rudat}, Alexander and {Villase{\~n}or}, Jesus Noel S. and {Vezie}, Michael and {Goeke}, Robert F. and {Ricker}, George R. and {Latham}, David W. and {Seager}, S. and {Winn}, Joshua N. and {Jenkins}, Jon M. and {Bakos}, G. {\'A}. and {Barclay}, Thomas and {Berta-Thompson}, Zachory K. and {Bouma}, Luke G. and {Boyd}, Patricia T. and {Brasseur}, C.~E. and {Burt}, Jennifer and {Caldwell}, Douglas A. and {Charbonneau}, David and {Christensen-Dalsgaard}, J. and {Clampin}, Mark and {Collins}, Karen A. and {Col{\'o}n}, Knicole D. and {De Lee}, Nathan and {Dunham}, Edward and {Fleming}, Scott W. and {Fong}, William and {Garcia Soto}, Aylin and {Scott Gaudi}, B. and {Guerrero}, Natalia M. and {Hesse}, Katharine and {Holman}, Matthew J. and {Huang}, Chelsea X. and {Kaltenegger}, Lisa and {Lissauer}, Jack J. and {McDermott}, Scott and {McLean}, Brian and {Mireles}, Ismael and {Mullally}, Susan E. and {Oelkers}, Ryan J. and {Paegert}, Martin and {P{\'a}l}, Andr{\'a}s and {Quintana}, Elisa V. and {Rinehart}, S.~A. and {Rodriguez}, David R. and {Rose}, Mark and {Sasselov}, Dimitar D. and {Schlieder}, Joshua E. and {Sha}, Lizhou and {Shporer}, Avi and {Smith}, Jeffrey C. and {Stassun}, Keivan G. and {Tenenbaum}, Peter and {Ting}, Eric B. and {Torres}, Guillermo and {Twicken}, Joseph D. and {Vanderburg}, Andrew and {Wohler}, Bill and {Yu}, Liang},
         title = "{The TESS Mission Target Selection Procedure}",
       journal = {\pasp},
@@ -133,7 +133,7 @@ archivePrefix = {arXiv},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
-@ARTICLE{2021AJ....162..161H,
+@ARTICLE{Hirano_Brasseur_2021AJ....162..161H,
        author = {{Hirano}, Teruyuki and {Livingston}, John H. and {Fukui}, Akihiko and {Narita}, Norio and {Harakawa}, Hiroki and {Ishikawa}, Hiroyuki Tako and {Miyakawa}, Kohei and {Kimura}, Tadahiro and {Nakayama}, Akifumi and {Fujita}, Naho and {Hori}, Yasunori and {Stassun}, Keivan G. and {Bieryla}, Allyson and {Cadieux}, Charles and {Ciardi}, David R. and {Collins}, Karen A. and {Ikoma}, Masahiro and {Vanderburg}, Andrew and {Barclay}, Thomas and {Brasseur}, C.~E. and {de Leon}, Jerome P. and {Doty}, John P. and {Doyon}, Ren{\'e} and {Esparza-Borges}, Emma and {Esquerdo}, Gilbert A. and {Furlan}, Elise and {Gaidos}, Eric and {Gonzales}, Erica J. and {Hodapp}, Klaus and {Howell}, Steve B. and {Isogai}, Keisuke and {Winn}, Joshua N.},
         title = "{Two Bright M Dwarfs Hosting Ultra-Short-Period Super-Earths with Earth-like Compositions}",
       journal = {\aj},
@@ -152,7 +152,7 @@ archivePrefix = {arXiv},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
-@ARTICLE{2021AJ....162..265M,
+@ARTICLE{MacDougall_Brasseur_2021AJ....162..265M,
        author = {{MacDougall}, Mason G. and {Petigura}, Erik A. and {Angelo}, Isabel and {Lubin}, Jack and {Batalha}, Natalie M. and {Beard}, Corey and {Behmard}, Aida and {Blunt}, Sarah and {Brinkman}, Casey and {Chontos}, Ashley and {Crossfield}, Ian J.~M. and {Dai}, Fei and {Dalba}, Paul A. and {Dressing}, Courtney and {Fulton}, Benjamin and {Giacalone}, Steven and {Hill}, Michelle L. and {Howard}, Andrew W. and {Huber}, Daniel and {Isaacson}, Howard and {Kane}, Stephen R. and {Mayo}, Andrew and {Mo{\v{c}}nik}, Teo and {Akana Murphy}, Joseph M. and {Polanski}, Alex and {Rice}, Malena and {Robertson}, Paul and {Rosenthal}, Lee J. and {Roy}, Arpita and {Rubenzahl}, Ryan A. and {Scarsdale}, Nicholas and {Turtelboom}, Emma and {Zandt}, Judah Van and {Weiss}, Lauren M. and {Matthews}, Elisabeth and {Jenkins}, Jon M. and {Latham}, David W. and {Ricker}, George R. and {Seager}, S. and {Vanderspek}, Roland K. and {Winn}, Joshua N. and {Brasseur}, C.~E. and {Doty}, John and {Fausnaugh}, Michael and {Guerrero}, Natalia and {Henze}, Chris and {Lund}, Michael B. and {Shporer}, Avi},
         title = "{The TESS-Keck Survey. VI. Two Eccentric Sub-Neptunes Orbiting HIP-97166}",
       journal = {\aj},
@@ -171,7 +171,7 @@ archivePrefix = {arXiv},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
-@ARTICLE{2022ApJ...928....8F,
+@ARTICLE{Fleming_Brasseur_2022ApJ...928....8F,
        author = {{Fleming}, Scott W. and {Million}, Chase and {Osten}, Rachel A. and {Kolotkov}, Dmitrii Y. and {Brasseur}, C.~E.},
         title = "{New Time-resolved, Multi-band Flares in the GJ 65 System with gPhoton}",
       journal = {\apj},
@@ -190,7 +190,7 @@ archivePrefix = {arXiv},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
-@ARTICLE{2022AJ....163..144G,
+@ARTICLE{Gunther_Brasseur_2022AJ....163..144G,
        author = {{G{\"u}nther}, Maximilian N. and {Berardo}, David A. and {Ducrot}, Elsa and {Murray}, Catriona A. and {Stassun}, Keivan G. and {Olah}, Katalin and {Bouma}, L.~G. and {Rappaport}, Saul and {Winn}, Joshua N. and {Feinstein}, Adina D. and {Matthews}, Elisabeth C. and {Sebastian}, Daniel and {Rackham}, Benjamin V. and {Seli}, B{\'a}lint and {Triaud}, Amaury H.~M.~J. and {Gillen}, Edward and {Levine}, Alan M. and {Demory}, Brice-Olivier and {Gillon}, Micha{\"e}l and {Queloz}, Didier and {Ricker}, George R. and {Vanderspek}, Roland K. and {Seager}, Sara and {Latham}, David W. and {Jenkins}, Jon M. and {Brasseur}, C.~E. and {Col{\'o}n}, Knicole D. and {Daylan}, Tansu and {Delrez}, Laetitia and {Fausnaugh}, Michael and {Garcia}, Lionel J. and {Jayaraman}, Rahul and {Jehin}, Emmanuel and {Kristiansen}, Martti H. and {Kruijssen}, J.~M. Diederik and {Pedersen}, Peter Pihlmann and {Pozuelos}, Francisco J. and {Rodriguez}, Joseph E. and {Wohler}, Bill and {Zhan}, Zhuchang},
         title = "{Complex Modulation of Rapidly Rotating Young M Dwarfs: Adding Pieces to the Puzzle}",
       journal = {\aj},
@@ -209,7 +209,7 @@ archivePrefix = {arXiv},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
-@ARTICLE{2022AJ....163..151S,
+@ARTICLE{Silverstein_Brasseur_2022AJ....163..151S,
        author = {{Silverstein}, Michele L. and {Schlieder}, Joshua E. and {Barclay}, Thomas and {Hord}, Benjamin J. and {Jao}, Wei-Chun and {Vrijmoet}, Eliot Halley and {Henry}, Todd J. and {Cloutier}, Ryan and {Kostov}, Veselin B. and {Kruse}, Ethan and {Winters}, Jennifer G. and {Irwin}, Jonathan M. and {Kane}, Stephen R. and {Stassun}, Keivan G. and {Huang}, Chelsea and {Kunimoto}, Michelle and {Tey}, Evan and {Vanderburg}, Andrew and {Astudillo-Defru}, Nicola and {Bonfils}, Xavier and {Brasseur}, C.~E. and {Charbonneau}, David and {Ciardi}, David R. and {Collins}, Karen A. and {Collins}, Kevin I. and {Conti}, Dennis M. and {Crossfield}, Ian J.~M. and {Daylan}, Tansu and {Doty}, John P. and {Dressing}, Courtney D. and {Gilbert}, Emily A. and {Horne}, Keith and {Jenkins}, Jon M. and {Latham}, David W. and {Mann}, Andrew W. and {Matthews}, Elisabeth and {Paredes}, Leonardo A. and {Quinn}, Samuel N. and {Ricker}, George R. and {Schwarz}, Richard P. and {Seager}, Sara and {Sefako}, Ramotholo and {Shporer}, Avi and {Smith}, Jeffrey C. and {Stockdale}, Christopher and {Tan}, Thiam-Guan and {Torres}, Guillermo and {Twicken}, Joseph D. and {Vanderspek}, Roland and {Wang}, Gavin and {Winn}, Joshua N.},
         title = "{The LHS 1678 System: Two Earth-sized Transiting Planets and an Astrometric Companion Orbiting an M Dwarf Near the Convective Boundary at 20 pc}",
       journal = {\aj},
@@ -228,7 +228,7 @@ archivePrefix = {arXiv},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
-@ARTICLE{2022ApJ...935..167A,
+@ARTICLE{Astropy_Brasseur_2022ApJ...935..167A,
        author = {{Astropy Collaboration} and {Price-Whelan}, Adrian M. and {Lim}, Pey Lian and {Earl}, Nicholas and {Starkman}, Nathaniel and {Bradley}, Larry and {Shupe}, David L. and {Patil}, Aarya A. and {Corrales}, Lia and {Brasseur}, C.~E. and {N{\"o}the}, Maximilian and {Donath}, Axel and {Tollerud}, Erik and {Morris}, Brett M. and {Ginsburg}, Adam and {Vaher}, Eero and {Weaver}, Benjamin A. and {Tocknell}, James and {Jamieson}, William and {van Kerkwijk}, Marten H. and {Robitaille}, Thomas P. and {Merry}, Bruce and {Bachetti}, Matteo and {G{\"u}nther}, H. Moritz and {Aldcroft}, Thomas L. and {Alvarado-Montes}, Jaime A. and {Archibald}, Anne M. and {B{\'o}di}, Attila and {Bapat}, Shreyas and {Barentsen}, Geert and {Baz{\'a}n}, Juanjo and {Biswas}, Manish and {Zonca}, Andrea and {Astropy Project Contributors}},
         title = "{The Astropy Project: Sustaining and Growing a Community-oriented Open-source Project and the Latest Major Release (v5.0) of the Core Package}",
       journal = {\apj},
@@ -248,7 +248,7 @@ archivePrefix = {arXiv},
 }
 
 
-@ARTICLE{2019AJ....157...98G,
+@ARTICLE{Ginsburg_Brasseur_2019AJ....157...98G,
        author = {{Ginsburg}, Adam and {Sip{\H{o}}cz}, Brigitta M. and {Brasseur}, C.~E. and {Cowperthwaite}, Philip S. and {Craig}, Matthew W. and {Deil}, Christoph and {Guillochon}, James and {Guzman}, Giannina and {Liedtke}, Simon and {Lian Lim}, Pey and {Lockhart}, Kelly E. and {Mommert}, Michael and {Morris}, Brett M. and {Norman}, Henrik and {Parikh}, Madhura and {Persson}, Magnus V. and {Robitaille}, Thomas P. and {Segovia}, Juan-Carlos and {Singer}, Leo P. and {Tollerud}, Erik J. and {de Val-Borro}, Miguel and {Valtchanov}, Ivan and {Woillez}, Julien and {Astroquery Collaboration} and {a subset of astropy Collaboration}},
         title = "{astroquery: An Astronomical Web-querying Package in Python}",
       journal = {\aj},
@@ -267,7 +267,7 @@ archivePrefix = {arXiv},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
-@ARTICLE{2021AJ....161..194R,
+@ARTICLE{Rodriguez_Brasseur_2021AJ....161..194R,
        author = {{Rodriguez}, Joseph E. and {Quinn}, Samuel N. and {Zhou}, George and {Vanderburg}, Andrew and {Nielsen}, Louise D. and {Wittenmyer}, Robert A. and {Brahm}, Rafael and {Reed}, Phillip A. and {Huang}, Chelsea X. and {Vach}, Sydney and {Ciardi}, David R. and {Oelkers}, Ryan J. and {Stassun}, Keivan G. and {Hellier}, Coel and {Brasseur}, C.~E. and {Skinner}, Brett and {Stalport}, Manu and {Stevens}, Daniel J. and {Stibbards}, Caitlin and {Tinney}, C.~G. and {West}, R.~G. and {Yahalomi}, Daniel A. and {Zhang}, Hui},
         title = "{TESS Delivers Five New Hot Giant Planets Orbiting Bright Stars from the Full-frame Images}",
       journal = {\aj},
@@ -287,7 +287,7 @@ archivePrefix = {arXiv},
 }
 
 
-@ARTICLE{2006math......7351B,
+@ARTICLE{Brasseur_2006math......7351B,
        author = {{Brasseur}, Clara and {Grady}, Ryan E. and {Prassidis}, Stratos},
         title = "{Kazhdan's Property (T) for Graphs}",
       journal = {arXiv Mathematics e-prints},
@@ -304,7 +304,7 @@ archivePrefix = {arXiv},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
-@article{brasseur2009coverings,
+@article{brasseur_2009coverings,
     title = {Coverings, Laplacians, and Heat Kernels of Directed Graphs},
     author = {Brasseur, Clara E and Grady, Ryan E and Prassidis, Stratos},
     journal = {the electronic journal of combinatorics},
