--- a/bibfiles/Prominences.bib
+++ b/bibfiles/Prominences.bib
@@ -44,7 +44,7 @@ archivePrefix = {arXiv},
         pages = {429},
        adsurl = {https://ui.adsabs.harvard.edu/abs/2001pre5.conf..429D},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System},
-    publisher = {The Austrian Academy of Sciences}
+    publisher = {The Austrian Academy of Sciences},
       address = {Wien, Austria}
 }
 
