--- a/bibfiles/Prominences.bib
+++ b/bibfiles/Prominences.bib
@@ -1,3 +1,23 @@
+@ARTICLE{Donati_2006Sci...311..633D,
+       author = {{Donati}, Jean-Fran{\c{c}}ois and {Forveille}, Thierry and {Collier Cameron}, Andrew and {Barnes}, John R. and {Delfosse}, Xavier and {Jardine}, Moira M. and {Valenti}, Jeff A.},
+        title = "{The Large-Scale Axisymmetric Magnetic Topology of a Very-Low-Mass Fully Convective Star}",
+      journal = {Science},
+     keywords = {ASTRONOMY, Astrophysics},
+         year = 2006,
+        month = feb,
+       volume = {311},
+       number = {5761},
+        pages = {633-635},
+          doi = {10.1126/science.1121102},
+archivePrefix = {arXiv},
+       eprint = {astro-ph/0602069},
+ primaryClass = {astro-ph},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2006Sci...311..633D},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
 @ARTICLE{Walter_2004AN....325..241W,
        author = {{Walter}, F.~M.},
         title = "{Probing small scale structure in the atmosphere of V471 Tauri}",
